--- a/IP CUP X-Linked.qmd
+++ b/IP CUP X-Linked.qmd
@@ -29,23 +29,20 @@ hofte_analysefil <- read_sav("//ihelse.net/Kvalitetsregister/hbe/2011-06449/STAT
 
 analysefil <- hofte_analysefil %>% 
   filter(P_ACET_PRODUKT == 55) %>% 
-  mutate(kopptype = case_when(P_ACET_TYPE %in% 15:46 ~ 1 ,
-                              P_ACET_TYPE %in% c(69:98,100:105) ~ 2)) %>% 
-  filter(kopptype %in% 1:2)%>% 
+  mutate(kopptype = case_when(P_ACET_TYPE %in% c(69:98,100:105) ~ 1)) %>% 
+  filter(kopptype == 1)#%>% 
   mutate(INDIKATOR_2 = case_when(INDIKATOR ==  0 |
-                                R_FRAKTUR == 1 | #9 totalt i datasette
-                                R_GLUTEALSVIKT == 1 | #7 totalt i datasette
-                                R_INFEKSJON == 1 | #3 totalt i datasette
-                                R_LUKSASJON == 1 ~ 0,  #3 totalt i datasette
+                                R_FRAKTUR == 1 | #4 totalt i datasette
+                                R_GLUTEALSVIKT == 1 | #3 totalt i datasette
+                                R_INFEKSJON == 1 | #2 totalt i datasette
+                                R_LUKSASJON == 1 ~ 0,  #ingen 
                                 INDIKATOR == 1 & 
                                    is.na(R_FRAKTUR) &
                                    is.na(R_GLUTEALSVIKT) &
                                    is.na(R_GLUTEALSVIKT) &
                                    is.na(R_LUKSASJON) ~ 1 ))
 
-kopp1 = analysefil %>% filter(kopptype == 1) #UHMWPE
-
-kopp2 <- analysefil %>% filter(kopptype == 2) #Highly crosslinked polyethylen
+kopp1 <- analysefil %>% filter(kopptype == 1) #Highly crosslinked polyethylen
 
 
 ```
@@ -53,15 +50,9 @@ kopp2 <- analysefil %>% filter(kopptype == 2) #Highly crosslinked polyethylen
 ```{r, overlevelse}
 #| echo: false
 
-KM1 <- summary(survfit(Surv(SURVYRS, INDIKATOR_2)~1, data=kopp1))
-#211 for 10 år på kopp 1
-
-ti_års_overlevelse_kopp1 <- KM1$surv[211]
-ti_års_nrisk_kopp1 <- KM1$n.risk[211] #168
-
-KM2 <- summary(survfit(Surv(SURVYRS, INDIKATOR_2)~1, data=kopp2))
+KM <- summary(survfit(Surv(SURVYRS, INDIKATOR_2)~1, data=kopp1))
 #83 er 8.83 84 er 10.12
 
-ti_års_overlevelse_kopp2 <- KM2$surv[83] 
-ti_års_nrisk_kopp2 <- KM2$n.risk[83]
+ti_års_overlevelse_kopp <- KM$surv[83] 
+ti_års_nrisk_kopp <- KM$n.risk[83]
 ```
